[project]
name = "schedule-api"
version = "0.1.0"
description = "API для получения расписания из google таблицы."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.115.12",
    "openpyxl==3.1.5",
    "requests==2.32.3",
    "loguru==0.7.3",
]

[tool.ruff.lint]
select = ["ALL"]
