[project]
name = "schedule-api"
version = "0.1.0"
description = "API для получения расписания из google таблицы."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "RUF001", "RUF002", "RUF003",
    "TD002", "TD003", "FIX002",
    "PLR2004",
]
